body.css
body {
  /*! height: 100%; */
  width: 100vw;
  overflow-x: hidden;
  --logo-height: 79px;
}

body.active {
  background-color: rgb(255, 255, 255);
  overflow: hidden;
  /*! width:100vw; */
}

header {
  display: flex;
  flex-direction: column;
  /*position: relative;*/
  /*! z-index: -1; */
}

main {

  /*! display: none; */
  overflow-y: hidden;
}

main.active {
  display: block;
}


.empty-space2 {
  height: 100%;
}

@media (min-width: 1200px) {
  .empty-space2 {}

  main.active {
    display: block;
    margin-top: 100vh;
  }
}

@media (max-width: 1200px) {
  .empty-space2 {}

  main.active {
    display: block;
    /*! margin-top: 100vh; */
  }
}

@media (max-width: 992px) {
  .empty-space2 {
    /*! height: 531.8px; */
  }
}

@media (max-width: 768px) {
  .empty-space2 {}

  main.active {
    display: block;
  }
}

@media (max-width: 480px) {
  .empty-space2 {
    /*! height: 29vh; */
  }

  main.active {
    display: block;
    /*! margin-top: 100vh; */
    overflow-y: initial;
  }
}

